# backuptool

./: .gitmodules  CMakeLists.txt  backuptool  backuptool.cpp  go.mod  main.go  pyproject.toml
backup/: local.go
cache/: cache.go
config/: config.go
include/: backuptool.hpp
src/: CMakeLists.txt  backup.cpp  config.cpp  main.cpp  main_test.cpp
src/backuptool/: CMakeLists.txt  backup.cpp  config.cpp  object-backup.cpp  target.cpp  target_t.cpp
src/object/: object.fbs  object.obx.cpp  object.obx.hpp  objectbox-model.h  objectbox-model.json
